--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,4 +2,5 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizYay <%= pageTitle %>  </title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
