Various changes to the pages structure

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include("./partials/head.ejs") %> 
+<%- include("./partials/head.ejs") %>
 <body>
     <%- include("./partials/header.ejs") %>
-    <h4>Are you lost?</h4>
-    <p>Page not found</p>
-    <h2>404</h2>
-    <%- include("./partials/footer.ejs") %> 
+    <main>
+        <h3>Are you lost?</h3><br>
+        <p>Page not found</p>
+        <h1>404</h1>
+    </main>
+    <%- include("./partials/footer.ejs") %>
 </body>
 </html>
