--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,11 @@
 <nav>
-    <div>
-        <a href="/"><h1>QuizYay</h1></a>
+    <div class="site-title">
+        <a href="/"><h1><b>Q</b>uizYay</h1></a>
         <p>Contribute to the quiz questions and try answering some.</p>
     </div>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/create">Submit questions</a></li>
-        <li><a href="/quiz">QUIZ</a></li>
+    <ul class="nav-links">
+        <li><a href="/"><b>H</b>ome</a></li>
+        <li><a href="/create"><b>S</b>ubmit questions</a></li>
+        <li><a href="/quiz"><b>Q</b>UIZ</a></li>
     </ul>
 </nav>
