--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <%- include("./partials/head.ejs") %> 
 <body>
     <%- include("./partials/header.ejs") %>
+    <main></main>
     <%- include("./partials/footer.ejs") %> 
 </body>
 </html>
