--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
 <footer>
-    Copyright 2020 &copy;
+    <hr>
+    <p><b>Copyright 2020 &copy;</b></p>
+    <p><a href=<%= allQuestions %>>View all questions</a></p>
 </footer>
