--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 :root {
-    /* --bg-color: #747474; */
-    --bg-color: #ffffff;
+    --bg-color: #e7d8af;
     --text-color: #242424;
+    --transparent-color: #ffffff00;
 }
 
 * {
@@ -19,4 +19,116 @@
 body {
     max-width: 1200px;
     margin: auto;
+    align-items: center;
+}
+
+footer {
+    margin-top: 30px;
+    width: 100%;
+    text-align: center;
+}
+
+footer > p {
+    margin-top: 5px;
+}
+
+footer a {
+    font-size: .9em;
+    border-bottom: dotted 1px;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    min-height: 600px;
+    max-height: 600px;
+}
+
+nav {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 30px 1fr ;
+    justify-content: space-between;
+    margin: 0 20px 50px 20px;
+    min-height: 175px;
+}
+
+.site-title {
+    grid-column: 1 / 4;
+    grid-row: 2;
+}
+
+.site-title h1, .site-title b {
+    font-size: 2em;
+    margin-bottom: 5px;
+}
+
+.nav-links {
+    grid-column: 3;
+    grid-row: 3;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.nav-links li {
+    display: inline-block;
+    margin-left: 15px;
+    border-top: solid 2px;
+    border-right: solid 2px;
+    padding: 5px;
+}
+
+.nav-links li:hover, #createQuestionForm button:hover {
+    border-top: none;
+    border-right: none;
+    border-left: solid 2px;
+    border-bottom: solid 4px;
+}
+
+#createQuestionForm {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 590px;
+    width: 60%;
+}
+
+#createQuestionForm label {
+    font-weight: bold;
+}
+
+#createQuestionForm input {
+    width: 400px;
+    height: 32px;
+    text-align: center;
+    border: none;
+    border-bottom: 2px dashed;
+    border-right: 1px dotted;
+    color: black;
+    font-weight: bold;
+}
+
+#createQuestionForm button {
+    width: 150px;
+    height: 32px;
+    text-align: center;
+    border: none;
+    border-top: solid 2px;
+    border-right: solid 2px;
+}
+
+#createQuestionForm select, #createQuestionForm option {
+    margin-left: 25px;
+    border: none;
+    border: 2px dashed;
+    font-weight: bold;
+    height: 40px;
+    width: 40px;
+}
+
+#createQuestionForm button:hover {
+    cursor: pointer;
 }
