Some styles changes to the questions in the Home page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -132,3 +132,9 @@ nav {
 #createQuestionForm button:hover {
     cursor: pointer;
 }
+
+.questions-container {
+    display: flex;
+    justify-content: start;
+    align-items: left;
+}
