Simplified quiz.ejs to use forEach loop

--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -2,22 +2,22 @@
 <main>
     <h2>Quiz:</h2>
     <div class="quiz-container">
-        <% for( let i = 0; i < questions.length; i++ ) { %>
-        <form class="question" id="<%= questions[i]._id %>" action="">
-            <h4><span><%= i + 1 %> - </span><%= questions[i].title %></h4>
-            <ol type="A">
-                <li><input type="radio" name="<%= questions[i]._id %>" value="ans1" id="ans1_<%= questions[i]._id %>">
-                    <label for="ans1_<%= questions[i]._id %>" id="ans1_<%= questions[i]._id %>_label"> <%= questions[i].ans1 %></label></li>
-                <li><input type="radio" name="<%= questions[i]._id %>" value="ans2" id="ans2_<%= questions[i]._id %>">
-                    <label for="ans2_<%= questions[i]._id %>" id="ans2_<%= questions[i]._id %>_label"> <%= questions[i].ans2 %></label></li>
-                <li><input type="radio" name="<%= questions[i]._id %>" value="ans3" id="ans3_<%= questions[i]._id %>">
-                    <label for="ans3_<%= questions[i]._id %>" id="ans3_<%= questions[i]._id %>_label"> <%= questions[i].ans3 %></label></li>
-                <li><input type="radio" name="<%= questions[i]._id %>" value="ans4" id="ans4_<%= questions[i]._id %>">
-                    <label for="ans4_<%= questions[i]._id %>" id="ans4_<%= questions[i]._id %>_label"> <%= questions[i].ans4 %></label></li>
-            </ol>
-        </form>
-        <hr>
-        <% } %>
+        <% questions.forEach((question, idx) => { %>
+            <form class="question" id="<%= question._id %>" action="">
+                <h4><span><%= idx + 1 %> - </span><%= question.title %></h4>
+                <ol type="A">
+                    <li><input type="radio" name="<%= question._id %>" value="ans1" id="ans1_<%= question._id %>">
+                        <label for="ans1_<%= question._id %>" id="ans1_<%= question._id %>_label"> <%= question.ans1 %></label></li>
+                    <li><input type="radio" name="<%= question._id %>" value="ans2" id="ans2_<%= question._id %>">
+                        <label for="ans2_<%= question._id %>" id="ans2_<%= question._id %>_label"> <%= question.ans2 %></label></li>
+                    <li><input type="radio" name="<%= question._id %>" value="ans3" id="ans3_<%= question._id %>">
+                        <label for="ans3_<%= question._id %>" id="ans3_<%= question._id %>_label"> <%= question.ans3 %></label></li>
+                    <li><input type="radio" name="<%= question._id %>" value="ans4" id="ans4_<%= question._id %>">
+                        <label for="ans4_<%= question._id %>" id="ans4_<%= question._id %>_label"> <%= question.ans4 %></label></li>
+                </ol>
+            </form>
+            <hr>
+        <% }) %>
         <button id="submitQuiz"><b>S</b>ubmit <b>Q</b>uiz</button>
     </div>
     <div id="quizResultModal">
